--- a/Offside test img.html
+++ b/Offside test img.html
@@ -436,17 +436,20 @@ var v_tstI
             ctx.lineTo(extendedPoint1.x, extendedPoint1.y);
 
             ctx.stroke();
-			 ctx.beginPath();
+
             var dp = -(x - xyq1.x) / Math.abs(x - xyq1.x);
 
             var tdx = Math.cos(d * dp * theta) * (x - xyq1.x) - Math.sin(d * dp * theta) * (y - xyq1.y) + xyq1.x;
-
+				tdx=Math.max(0,tdx);
             var tdy = Math.sin(d * dp * theta) * (x - xyq1.x) + Math.cos(d * dp * theta) * (y - xyq1.y) + xyq1.y;
-            var tdxy = {
+			tdy=Math.max(0,tdy);
+           
+	if(theta!==0){
+		   var tdxy = {
                 x: tdx,
                 y: tdy
             };
-
+			 ctx.beginPath();
             ctx.moveTo(extendedPoint.x, extendedPoint.y);
             extendedPoint2 = toBorder(xyq1, tdxy, 0, canvas.clientWidth, canvas.clientHeight, 0);
             ctx.lineTo(extendedPoint2.x, extendedPoint2.y);
@@ -460,6 +463,7 @@ var v_tstI
             ctx.fill();
 			//angl = Math.PI + Math.atan2((extendedPoint.x - extendedPoint1.x) , extendedPoint1.y); //SkewX
 			angl = Math.atan2(y-yq1,xq1-x)-0.5*Math.PI;
+			}
 			}else{
 			ctx.moveTo(x, 0);
 			ctx.lineTo(x,canvas.clientHeight+canvas.offsetTop+canvas.clientTop);
@@ -537,19 +541,21 @@ var v_tstI
 
             ctx.stroke();
 			
-            ctx.beginPath();
+
 
             var dp = -(x - xyq1.x) / Math.abs(x - xyq1.x);
 
             var tdx = Math.cos(d * dp * thetav) * (x - xyq1.x) - Math.sin(d * dp * thetav) * (y - xyq1.y) + xyq1.x;
-
+				tdx=Math.max(0,tdx);
             var tdy = Math.sin(d * dp * thetav) * (x - xyq1.x) + Math.cos(d * dp * thetav) * (y - xyq1.y) + xyq1.y;
+				tdy=Math.max(0,tdy);
 
-            var tdxy = {
+			if(thetav!==0){
+			            var tdxy = {
                 x: tdx,
                 y: tdy
             };
-
+            ctx.beginPath();
             ctx.moveTo(	extendedPoint.x, extendedPoint.y);
             extendedPoint2 = toBorder(xyq1, tdxy, 0, canvas.clientWidth, canvas.clientHeight, 0);
             ctx.lineTo(extendedPoint2.x, extendedPoint2.y);
@@ -563,13 +569,13 @@ var v_tstI
 			//let calc=Math.asin(Math.abs(extendedPoint1.y-extendedPoint.y)/Math.sqrt((extendedPoint1.x-extendedPoint.x)*(extendedPoint1.x-extendedPoint.x)+(extendedPoint1.y-extendedPoint.y)*(extendedPoint1.y-extendedPoint.y)));
 			//angl =(y<yq1||x<xq1||xyq1.y<tdxy.y)?-calc:calc; //SkewY attempt
 			angl =Math.atan2(y-tdy,tdx-x)-0.5*Math.PI;
+			}
 			}else{
 			ctx.moveTo(0, y);
 			ctx.lineTo(canvas.clientWidth+canvas.offsetLeft+canvas.clientLeft, y);
 			ctx.stroke();
 			angl=0;
 			}
-			
         }
     }
 </script>
