--- a/Offside test (Net).html
+++ b/Offside test (Net).html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="numeric-1.2.6_stripped.js"></script>
 </head>
 
-<body>
+<body style="overflow: scroll;">
 <main style="display: -webkit-inline-box;">
 <section style="display: table-caption;width: 61ch;">
 <input type="text" style="width: 78ch;margin-right: 0.2ch;background-color: buttonface;" id="txtBx">
@@ -28,6 +28,7 @@
 
 <script>
 var cntn = document.getElementsByClassName('container')[0];
+var OG_cbr;
 var angl = 0;
 var p = {
     x: 0,
@@ -49,6 +50,7 @@ function changeValue()
     vid.src = txtVal;  
     var myVdo = document.getElementById("vd1");     
     myVdo.load(); 
+	OG_cbr=cntn.getBoundingClientRect();
 	actStart();
 }
   function actStart() {
@@ -66,7 +68,9 @@ function changeValue()
 			if (!lkln.checked) {
 				cntn.style.cssText = '';
 			} else if (scr>1) {
-				cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad);';
+			   let cbr=cntn.getBoundingClientRect();
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad) translate('+(OG_cbr.left-cbr.left)+'px,'+(OG_cbr.top-cbr.top)+'px);';
 			}
 			switcher();
 		}
@@ -274,6 +278,8 @@ function changeValue()
             setupt(p.x, p.y, d);
 			if (lkln.checked == true && scr>1)  {
                cntn.style.cssText = 'transform: rotate(' + angl + 'rad);';
+			   let cbr=cntn.getBoundingClientRect();
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad) translate('+(cbr.left-OG_cbr.left)+'px,'+(cbr.top-OG_cbr.top)+'px);';
             }
         }
 
@@ -282,7 +288,9 @@ function changeValue()
             draw_canvas(ctx, ctx1, ctx2);
             setup(p.x, p.y, d);
 			if (lkln.checked == true && scr>1)  {
-               cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad);';
+			   let cbr=cntn.getBoundingClientRect();
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad) translate('+(OG_cbr.left-cbr.left)+'px,'+(OG_cbr.top-cbr.top)+'px);';
             }
 
         }
@@ -310,7 +318,9 @@ function changeValue()
 			if (!lkln.checked) {
 				cntn.style.cssText = '';
 			} else if (scr>1) {
-				cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad);';
+			   let cbr=cntn.getBoundingClientRect();
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad) translate('+(OG_cbr.left-cbr.left)+'px,'+(OG_cbr.top-cbr.top)+'px);';
 			}
 			switcher();
 		}
@@ -453,7 +463,9 @@ function changeValue()
                 let o_x = event.clientX - rect.left;
                 let o_y = event.clientY - rect.top;
                 if (scr>1) {
-				cntn.style.cssText =  'transform: rotate(' + angl + 'rad);';
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad);';
+			   let cbr=cntn.getBoundingClientRect();
+               cntn.style.cssText = 'transform: rotate(' + angl + 'rad) translate('+(OG_cbr.left-cbr.left)+'px,'+(OG_cbr.top-cbr.top)+'px);';
 				}
                 return {
                     x: o_x,
@@ -634,7 +646,7 @@ function changeValue()
             var tdx = Math.cos(d * dp * thetav) * (x - xyq1.x) - Math.sin(d * dp * thetav) * (y - xyq1.y) + xyq1.x;
 
             var tdy = Math.sin(d * dp * thetav) * (x - xyq1.x) + Math.cos(d * dp * thetav) * (y - xyq1.y) + xyq1.y;
-			angl =Math.atan2(y-tdy,tdx-x)-0.5*Math.PI;
+           			angl = Math.atan2(y-yq1,xq1-x)-0.5*Math.PI;
 			if(thetav!==0){
 			            var tdxy = {
                 x: tdx,
