--- a/Offside test img.html
+++ b/Offside test img.html
@@ -284,6 +284,7 @@ function actStart() {
 					let diff2=(refDiff==0)?0:rfV.valueAsNumber*(diff/refDiff);
 					diff2=Math.abs(diff2);
 					diff2=(neg)?-diff2:diff2;
+					outV=diff2;
 					rfVLbl.innerText=diff2.toLocaleString('en-GB', {minimumFractionDigits: 0, maximumFractionDigits: 7, useGrouping: false});
 				}else if(angls_v.red==0  && angls_v.blue==0){
 										let a=Math.abs(xs[2]-xs[3]);
@@ -304,6 +305,7 @@ function actStart() {
 					let diff2=(refDiff==0)?0:rfH.valueAsNumber*(diff/refDiff);
 					diff2=Math.abs(diff2);
 					diff2=(neg)?-diff2:diff2;
+					outH=diff2;
 					rfHLbl.innerText=diff2.toLocaleString('en-GB', {minimumFractionDigits: 0, maximumFractionDigits: 7, useGrouping: false});
 				}else if(angls_h.red==0  && angls_h.blue==0){
 										let a=Math.abs(xs[2]-xs[3]);
@@ -533,7 +535,7 @@ function actStart() {
            redSw.click();
         } else if (!event.ctrlKey) {
 		event.preventDefault();
-            p = get_mouse_position(event);
+           // p = get_mouse_position(event);
 
             scr = (scr + (event.deltaY / event.deltaY)) % 6;
 
