--- a/Offside test.html
+++ b/Offside test.html
@@ -353,6 +353,7 @@ y: null
 					let diff2=(refDiff==0)?0:rfV.valueAsNumber*(diff/refDiff);
 					diff2=Math.abs(diff2);
 					diff2=(neg)?-diff2:diff2;
+					outV=diff2;
 					rfVLbl.innerText=diff2.toLocaleString('en-GB', {minimumFractionDigits: 0, maximumFractionDigits: 7, useGrouping: false});
 				}else if(angls_v.red==0  && angls_v.blue==0){
 										let a=Math.abs(xs[2]-xs[3]);
@@ -373,6 +374,7 @@ y: null
 					let diff2=(refDiff==0)?0:rfH.valueAsNumber*(diff/refDiff);
 					diff2=Math.abs(diff2);
 					diff2=(neg)?-diff2:diff2;
+					outH=diff2;
 					rfHLbl.innerText=diff2.toLocaleString('en-GB', {minimumFractionDigits: 0, maximumFractionDigits: 7, useGrouping: false});
 				}else if(angls_h.red==0  && angls_h.blue==0){
 										let a=Math.abs(xs[2]-xs[3]);
@@ -605,7 +607,7 @@ y: null
            redSw.click();
         } else if (!event.ctrlKey) {
 		event.preventDefault();
-            p = get_mouse_position(event);
+            //p = get_mouse_position(event);
 
             scr = (scr + (event.deltaY / event.deltaY)) % 6;
 
