--- a/Offside test.html
+++ b/Offside test.html
@@ -567,14 +567,14 @@ y: null
 
     canvas.addEventListener("wheel", function(event) {
 
-        if (event.altKey) {
+      /*  if (event.altKey) {
             event.preventDefault();
             if (event.deltaY / Math.abs(event.deltaY) < 0) {
                 gpl();
             } else {
                 gmi();
             }
-        } else if (event.shiftKey) {
+        } else */if (event.shiftKey) {
 		event.preventDefault();
            redSw.click();
         } else if (!event.ctrlKey) {
