--- a/Offside test.html
+++ b/Offside test.html
@@ -897,7 +897,7 @@ function toBorders(from, to, left, right, top, bottom ){
 							drawLine(ctx,{x:0,y:y},{x:canvas.clientWidth,y:y},ss,0.7);
 							if(scr===2 || scr===3){
 								if(dfl){
-									drawLine(ctx,{x:x,y:y},{x:x,y:canvas.clientHeight},'yellow',0.7);
+									drawLine(ctx,{x:x,y:y},{x:x,y:canvas.clientHeight},ss,0.7);
 								}else{
 									drawLine(ctx,{x:x,y:y},{x:x,y:0},ss,0.7);
 								}
